--- a/v1/Tripperv1/css/itineraryBtn.css
+++ b/v1/Tripperv1/css/itineraryBtn.css
@@ -1,8 +1,8 @@
 .button-container {
     position: absolute;
     top: 0;
-    right: 200px;
-    margin: 10px;
+    right: 150px;
+    margin-top: 250px;
 }
 #itinerary{
     font-size: 20px;
@@ -10,15 +10,20 @@
     width: 200px;
     height: 100px;
     cursor: pointer;
-    margin-top: 250px;
+    margin-top: 0;
     border-radius: 6px;
 }
 .button-container button{
     font-size: 14px;
     padding: 10px 20px;
+    margin-bottom: 15px;
+    margin-left: 15px;
     width: 150px;
     height: 80px;
     cursor: pointer;
-    margin-top: 250px;
+    margin-top: 0;
     border-radius: 6px;
+}
+.button-container button:last-child {
+    margin-left: 104px;
 }
