--- a/Tripper 2.0 Cami e Ciro/templates/newItinerary.html
+++ b/Tripper 2.0 Cami e Ciro/templates/newItinerary.html
@@ -14,9 +14,12 @@
     <link rel="stylesheet" href="../static/jquery-ui-1.13.2/jquery-ui.css">
     <script src="../static/jquery-ui-1.13.2/jquery-ui.js"></script>
 
+    <script src="../static/js/jquery.ui.touch-punch.min.js"></script>
+
     <!--our script-->
     <link rel="stylesheet" href="../static/css/newItinerary.css">
     <link rel="stylesheet" href="../static/css/navbar.css">
+    <link rel="stylesheet" href="../static/css/carousel.css">
 </head>
 <body>
 <div id="logo">
