imparate ad usare i commit

--- a/Tripper 3.0/templates/index.html
+++ b/Tripper 3.0/templates/index.html
@@ -33,7 +33,7 @@
 
 <div class="content">
     <div id="userInput">
-        <form action="newItinerary.html">
+        <form action="/newItinerary">
             <label for="destination"></label>
             <div class="auto-search-wrapper">
                 <input type="text" autocomplete="off" id="destination" class="full-width" placeholder="Enter the city name"/>
